# sci2000

./: .gitmodules  README.md
android/Calibrator/: settings.gradle
aoa2nmea/: CMakeLists.txt  README.md  sdkconfig
aoa2nmea/main/: CMakeLists.txt  Event.hpp  LEDBlinker.cpp  LEDBlinker.h  N2KHandler.cpp  N2KHandler.h  USBAccHandler.cpp  USBAccHandler.h  aoa2nmea_main.cpp
bang-net-proto/: README.md  main.py
bang-net-proto/net-captures/: log-2023-01-21-010443.nmea
idf-components/N2K_BT/: CMakeLists.txt  N2kBt.cpp  N2kBt.h  SlipPacket.cpp  SlipPacket.h
idf-components/N2K_WIFI/: KnownSsidList.h.template  N2kWifi.cpp  N2kWifi.h
idf-components/NMEA2000_utils/: CMakeLists.txt  CustomPgnGroupFunctionHandler.cpp  CustomPgnGroupFunctionHandler.h  ESP32N2kStream.h
imu2nmea/: CMakeLists.txt  README.md  TODO
imu2nmea/doc/: bom.csv
imu2nmea/main/: CMakeLists.txt  CalibrationStorage.cpp  CalibrationStorage.h  ESP32N2kStream.cpp  (+15 more)
mhu2nmea/: CMakeLists.txt  Makefile  README.md  log.sh
mhu2nmea/main/: ADCHandler.cpp  ADCHandler.h  AWAComputer.cpp  AWAComputer.h  AWAHandler.cpp  AWAHandler.h  AWSHandler.cpp  AWSHandler.h  CMakeLists.txt  CNTHandler.cpp  CNTHandler.h  CalibrationStorage.cpp  CalibrationStorage.h  ESP32N2kStream.cpp  ESP32N2kStream.h  Event.hpp  LowPassFilter.cpp  LowPassFilter.h  N2KHandler.cpp  N2KHandler.h  SOWHandler.cpp  SOWHandler.h  TrueWindComputer.cpp  TrueWindComputer.h  mhu2nmea_main.c  mhu2nmea_main.cpp
mhusim/ftdi/: CMakeLists.txt  README.md
mhusim/ftdi/cmake/: FindFT4222.cmake  FindFTD2XX.cmake  FindLibEvent.cmake
mhusim/ftdi/inc/: i2cm.h  mcp4728.h  mhusim.h
mhusim/ftdi/src/: i2cm.c  main.c  main.cpp  mcp4728.c  mhusim.c
(+59 files in other folders)
