idf_component_register(
    SRCS
        mhu2nmea_main.cpp
        N2KHandler.cpp
        AWAHandler.cpp
        SOWHandler.cpp
        AWSHandler.cpp
        AWAComputer.cpp
        CNTHandler.cpp
        CalibrationStorage.cpp
        LEDBlinker.cpp
        LowPassFilter.cpp
        TrueWindComputer.cpp
    INCLUDE_DIRS
        ""
)
